--- a/Delivery service/NewUser.resx
+++ b/Delivery service/NewUser.resx
@@ -281,4 +281,7 @@
         Tb793y0brdil92b5f3gpfEJ+zX4mAAAAAElFTkSuQmCC
 </value>
   </data>
+  <metadata name="gunaElipse2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>134, 17</value>
+  </metadata>
 </root>
