--- a/Delivery service/MainMenu/Owner/ForOwner.resx
+++ b/Delivery service/MainMenu/Owner/ForOwner.resx
@@ -311,4 +311,7 @@
   <metadata name="gunaElipse9.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>247, 61</value>
   </metadata>
+  <metadata name="gunaElipse10.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>371, 61</value>
+  </metadata>
 </root>
